--- a/scrapping_allocine_with_mongo/templates/index.html
+++ b/scrapping_allocine_with_mongo/templates/index.html
@@ -4,14 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allociné Scraper</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
         body {
             font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f2f2f2; /* Gris clair */
+            color: #333;
+        }
+
+        header {
+            background-color: #ffcc00; /* Jaune Allociné */
+            color: #000; /* Noir */
+            padding: 15px;
+            text-align: center;
+        }
+
+        .container {
+            background-color: #fff; /* Blanc */
+            border-radius: 8px;
             margin: 20px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Ombre légère */
         }
 
         h1 {
-            color: #333;
+            color: #000; /* Noir */
+            font-size: 1.5em;
         }
 
         ul {
@@ -21,65 +41,90 @@
 
         li {
             border: 1px solid #ddd;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 5px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            padding: 20px;
+            background-color: #f8f8f8; /* Gris clair */
         }
 
         strong {
-            color: #007BFF;
+            color: #ffcc00; /* Jaune Allociné */
+            font-size: 1.2em;
         }
 
         img {
-            max-width: 200px;
-            border-radius: 5px;
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            margin-bottom: 15px;
         }
 
         p {
-            color: #777;
+            color: #555;
+            font-size: 1.1em;
         }
 
         input[type="text"] {
-            padding: 8px;
+            padding: 10px;
             border: 1px solid #ddd;
             border-radius: 3px;
+            margin-bottom: 15px;
         }
 
         button {
-            padding: 8px 12px;
+            padding: 10px 15px;
             background-color: #007BFF;
             color: #fff;
             border: none;
             border-radius: 3px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        .film-details {
+            display: flex;
+            flex-direction: column;
+        }
+        .film-image {
+            width: 300px;
+            height: auto;
+            border-radius: 8px;
         }
     </style>
 </head>
 <body>
-    <h1>Films et horaires cinémas CGR Torcy</h1>
+    <header>
+        <h1>Films et horaires cinémas CGR Torcy</h1>
+    </header>
 
-    
-    
-    {% if resultats %}
-        <ul>
-            {% for film in resultats %}
-                <li>
-                    <strong>{{ film['nom_film'] }}</strong><br>
-                    {% if film['image_url'] %}
-                        <img src="{{ film['image_url'] }}" alt="{{ film['nom_film'] }}"><br>
-                    {% else %}
-                        <p>Image non disponible</p>
-                    {% endif %}
+    <div class="container">
+        {% if resultats %}
+            <ul>
+                {% for film in resultats %}
+                    <li>
+                        <strong>{{ film['nom_film'] }}</strong><br>
+                            {% if film['image_url'] %}
+                                <div class="film-details">
+                                    <img class="film-image" src="{{ film['image_url'] }}" alt="{{ film['nom_film'] }}">
+                                    {% if film['content-text'] is not none %}
+                                        <p>{{ film['content-text'] }}</p>
+                                    {% endif %}
+                                    <strong>Horaires:</strong> {{ film['horaires']|join(', ') }}
+                                </div>
+                            {% else %}
+                                <p>Image non disponible</p>
+                            {% endif %}
+                    </li>
+                {% endfor %}
 
-                    {% if film['content-text'] is not none %}
-                        <p>{{film['content-text']}}</p>
-                    {% endif %}
-                    <strong>Horaires:</strong> {{ film['horaires']|join(', ') }}
-                </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p style="color: red;">Erreur lors du scraping des données.</p>
-    {% endif %}
+            </ul>
+        {% else %}
+            <p class="text-danger">Erreur lors du scraping des données.</p>
+        {% endif %}
+    </div>
 </body>
 </html>
